--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- link tailwind css -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <title>Homework React JS 005</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
